--- a/ArchComponentsAnalyst/app/src/main/res/layout/activity_main.xml
+++ b/ArchComponentsAnalyst/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.auto.archcomponentsanalyst.MainActivity">
+    tools:context="com.auto.aacanalyst.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/acb_workmanager"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="10dp"
+        android:text="WorkManager"
+        android:textColor="@android:color/white"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:background="@android:color/holo_blue_dark"
+        android:onClick="onClickWorkManager"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <!--<android.support.v7.widget.AppCompatButton-->
+        <!--android:id="@+id/acb_room"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="Room"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textSize="16sp"-->
+        <!--android:gravity="center"-->
+        <!--android:background="@android:color/holo_blue_light"-->
+        <!--android:onClick="onClickRoom"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/acb_workmanager"/>-->
+
+    <!--<android.support.v7.widget.AppCompatButton-->
+        <!--android:id="@+id/acb_paging"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="Paging"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textSize="16sp"-->
+        <!--android:gravity="center"-->
+        <!--android:background="@android:color/holo_blue_light"-->
+        <!--android:onClick="onClickPaging"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/acb_room"/>-->
+
+    <!--<android.support.v7.widget.AppCompatButton-->
+        <!--android:id="@+id/acb_viewmodel"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="ViewModel"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textSize="16sp"-->
+        <!--android:gravity="center"-->
+        <!--android:background="@android:color/holo_blue_light"-->
+        <!--android:onClick="onClickViewModel"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/acb_paging"/>-->
+
+    <!--<android.support.v7.widget.AppCompatButton-->
+        <!--android:id="@+id/acb_date"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="DataLive"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textSize="16sp"-->
+        <!--android:gravity="center"-->
+        <!--android:background="@android:color/holo_blue_light"-->
+        <!--android:onClick="onClickDataLive"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/acb_viewmodel"/>-->
+
+    <!--<android.support.v7.widget.AppCompatButton-->
+        <!--android:id="@+id/acb_lifecycle"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="Lifecycle"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textSize="16sp"-->
+        <!--android:gravity="center"-->
+        <!--android:background="@android:color/holo_blue_light"-->
+        <!--android:onClick="onClickLifecycle"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/acb_date"/>-->
 
 </android.support.constraint.ConstraintLayout>
